--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">Ich bin Kalle Nutivaara.</h1>
-            <h3>Ein 19 Jähriger mit dem Ziel Mediamatiker zu werden.<br>
+            <h3>Ein 19 Jähriger mit dem Ziel Kaufmann im Automobil-Gewerbe zu werden.<br>
            	Erfahren Sie, wieso ich der Richtige für Ihr Team bin.<br>
             Erfahren Sie mehr <a class="smoothscroll" href="#about">über mich</a>.</h3>
             <hr />
